--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,11 @@
             android:label="@string/settings" />
 
         <activity
+            android:name=".settings.SettingsV2Activity"
+            android:exported="true"
+            android:label="@string/settings" />
+
+        <activity
             android:name=".about.AboutActivity"
             android:exported="false"
             android:label="@string/title_activity_about" />
